@@ -8,8 +8,14 @@ the Free Software Foundation, either version 2 of the License, or
 http://gtkhash.sourceforge.net/
 
 Dependencies:
-    Required: mhash, GTK+ 2
-    Optional (Nautilus extension): Nautilus, GConf
+    Required:
+        Glib 2
+        GTK+ 2 or 3
+    Optional:
+        mhash
+        Libgcrypt
+        Linux-2.6.38 (with CONFIG_CRYPTO_USER_API_HASH)
+        Nautilus and GConf
 
 Translations:
     Please submit any new or updated translations here:
