@@ -28,33 +28,33 @@
 #include "hash-lib.h"
 
 static const char * const hash_func_names[HASH_FUNCS_N] = {
-	[HASH_FUNC_MD2]       = "MD2",
-	[HASH_FUNC_MD4]       = "MD4",
-	[HASH_FUNC_MD5]       = "MD5",
-	[HASH_FUNC_SHA1]      = "SHA1",
-	[HASH_FUNC_SHA224]    = "SHA224",
-	[HASH_FUNC_SHA256]    = "SHA256",
-	[HASH_FUNC_SHA384]    = "SHA384",
-	[HASH_FUNC_SHA512]    = "SHA512",
-	[HASH_FUNC_RIPEMD128] = "RIPEMD128",
-	[HASH_FUNC_RIPEMD160] = "RIPEMD160",
-	[HASH_FUNC_RIPEMD256] = "RIPEMD256",
-	[HASH_FUNC_RIPEMD320] = "RIPEMD320",
-	[HASH_FUNC_HAVAL128]  = "HAVAL128",
-	[HASH_FUNC_HAVAL160]  = "HAVAL160",
-	[HASH_FUNC_HAVAL192]  = "HAVAL192",
-	[HASH_FUNC_HAVAL224]  = "HAVAL224",
-	[HASH_FUNC_HAVAL256]  = "HAVAL256",
-	[HASH_FUNC_TIGER128]  = "TIGER128",
-	[HASH_FUNC_TIGER160]  = "TIGER160",
-	[HASH_FUNC_TIGER192]  = "TIGER192",
-	[HASH_FUNC_GOST]      = "GOST",
-	[HASH_FUNC_WHIRLPOOL] = "WHIRLPOOL",
-	[HASH_FUNC_SNEFRU128] = "SNEFRU128",
-	[HASH_FUNC_SNEFRU256] = "SNEFRU256",
-	[HASH_FUNC_CRC32]     = "CRC32",
-	[HASH_FUNC_CRC32B]    = "CRC32B",
-	[HASH_FUNC_ADLER32]   = "ADLER32"
+	[HASH_FUNC_ADLER32]      = "ADLER32",
+	[HASH_FUNC_CRC32]        = "CRC32",
+	[HASH_FUNC_CRC32B]       = "CRC32B",
+	[HASH_FUNC_GOST]         = "GOST",
+	[HASH_FUNC_HAVAL128_3]   = "HAVAL128-3",
+	[HASH_FUNC_HAVAL160_3]   = "HAVAL160-3",
+	[HASH_FUNC_HAVAL192_3]   = "HAVAL192-3",
+	[HASH_FUNC_HAVAL224_3]   = "HAVAL224-3",
+	[HASH_FUNC_HAVAL256_3]   = "HAVAL256-3",
+	[HASH_FUNC_MD2]          = "MD2",
+	[HASH_FUNC_MD4]          = "MD4",
+	[HASH_FUNC_MD5]          = "MD5",
+	[HASH_FUNC_RIPEMD128]    = "RIPEMD128",
+	[HASH_FUNC_RIPEMD160]    = "RIPEMD160",
+	[HASH_FUNC_RIPEMD256]    = "RIPEMD256",
+	[HASH_FUNC_RIPEMD320]    = "RIPEMD320",
+	[HASH_FUNC_SHA1]         = "SHA1",
+	[HASH_FUNC_SHA224]       = "SHA224",
+	[HASH_FUNC_SHA256]       = "SHA256",
+	[HASH_FUNC_SHA384]       = "SHA384",
+	[HASH_FUNC_SHA512]       = "SHA512",
+	[HASH_FUNC_SNEFRU128]    = "SNEFRU128",
+	[HASH_FUNC_SNEFRU256]    = "SNEFRU256",
+	[HASH_FUNC_TIGER128]     = "TIGER128",
+	[HASH_FUNC_TIGER160]     = "TIGER160",
+	[HASH_FUNC_TIGER192]     = "TIGER192",
+	[HASH_FUNC_WHIRLPOOL]    = "WHIRLPOOL",
 };
 
 enum hash_func_e gtkhash_hash_func_get_id_from_name(const char *name)
