@@ -22,40 +22,40 @@
 
 #include <stdbool.h>
 
-#define HASH_FUNCS_N 27
+#define HASH_FUNCS_N (HASH_FUNC_ADLER32 + 1)
 #define HASH_FUNC_IS_DEFAULT(X) \
 	((X) == HASH_FUNC_MD5 || (X) == HASH_FUNC_SHA1 || (X) == HASH_FUNC_SHA256)
 
 // All supported hash functions
 enum hash_func_e {
-	HASH_FUNC_INVALID     = -1,
-	HASH_FUNC_MD2         =  0,
-	HASH_FUNC_MD4         =  1,
-	HASH_FUNC_MD5         =  2,
-	HASH_FUNC_SHA1        =  3,
-	HASH_FUNC_SHA224      =  4,
-	HASH_FUNC_SHA256      =  5,
-	HASH_FUNC_SHA384      =  6,
-	HASH_FUNC_SHA512      =  7,
-	HASH_FUNC_RIPEMD128   =  8,
-	HASH_FUNC_RIPEMD160   =  9,
-	HASH_FUNC_RIPEMD256   = 10,
-	HASH_FUNC_RIPEMD320   = 11,
-	HASH_FUNC_HAVAL128    = 12,
-	HASH_FUNC_HAVAL160    = 13,
-	HASH_FUNC_HAVAL192    = 14,
-	HASH_FUNC_HAVAL224    = 15,
-	HASH_FUNC_HAVAL256    = 16,
-	HASH_FUNC_TIGER128    = 17,
-	HASH_FUNC_TIGER160    = 18,
-	HASH_FUNC_TIGER192    = 19,
-	HASH_FUNC_GOST        = 20,
-	HASH_FUNC_WHIRLPOOL   = 21,
-	HASH_FUNC_SNEFRU128   = 22,
-	HASH_FUNC_SNEFRU256   = 23,
-	HASH_FUNC_CRC32       = 24,
-	HASH_FUNC_CRC32B      = 25,
-	HASH_FUNC_ADLER32     = 26
+	HASH_FUNC_INVALID = -1,
+	HASH_FUNC_MD2,
+	HASH_FUNC_MD4,
+	HASH_FUNC_MD5,
+	HASH_FUNC_SHA1,
+	HASH_FUNC_SHA224,
+	HASH_FUNC_SHA256,
+	HASH_FUNC_SHA384,
+	HASH_FUNC_SHA512,
+	HASH_FUNC_RIPEMD128,
+	HASH_FUNC_RIPEMD160,
+	HASH_FUNC_RIPEMD256,
+	HASH_FUNC_RIPEMD320,
+	HASH_FUNC_TIGER128,
+	HASH_FUNC_TIGER160,
+	HASH_FUNC_TIGER192,
+	HASH_FUNC_WHIRLPOOL,
+	HASH_FUNC_HAVAL128_3,
+	HASH_FUNC_HAVAL160_3,
+	HASH_FUNC_HAVAL192_3,
+	HASH_FUNC_HAVAL224_3,
+	HASH_FUNC_HAVAL256_3,
+	HASH_FUNC_GOST,
+	HASH_FUNC_SNEFRU128,
+	HASH_FUNC_SNEFRU256,
+	HASH_FUNC_CRC32,
+	HASH_FUNC_CRC32B,
+	HASH_FUNC_ADLER32,
 };
 
 struct hash_func_s {
